# quickshell

./: .gitignore  flake.nix  history.js  shell.qml
backendqs/: Cargo.toml  result  test_nucleo.rs
backendqs/src/: agenda.rs  api.rs  archivepreview.rs  bin_test.rs  bookmarks.rs  cliphist.rs  context.rs  dictionary.rs  filesearch.rs  fileshare.rs  frecency.rs  handler.rs  lyrics.rs  main.rs  math.rs  music.rs  music_remote.rs  parser.rs  pdfpreview.rs  state.rs  sysctl.rs  videopreview.rs  weather.rs
bar/: BezelsMask.qml  BottomBar.qml  LeftBar.qml  RightBar.qml  TopBar.qml
bar/modules/: Bluetooth.qml  Calendar.qml  Network.qml  PomodoroIndicator.qml  PowerMenu.qml  SystemStats.qml  Weather.qml  Workspaces.qml
desktop/: AnimatedWallpaper.qml  BezelsMask.qml  FullscreenMedia.qml  LyricsDesktop.qml  LyricsOverlay.qml  Wallpaper.qml
dock/: Dock.qml  DockBackend.qml  DockBluetooth.qml  DockClock.qml  DockItem.qml  DockNetwork.qml  DockPomodoroIndicator.qml  DockRecordingIndicator.qml  DockSystemStats.qml  DockWeather.qml  WorkspaceBar.qml  WorkspaceItem.qml
lock/: Lock.qml  LockSurface.qml
popups/: BrightnessPopup.qml  ChargePopup.qml  FileShareNotch.qml  FileStashPopup.qml  NotifPopup.qml  RecordingIndicator.qml  ScreenshotEditor.qml  ScreenshotOverlay.qml  ScreenshotPopup.qml  VolumePopup.qml
popups/calendar/: AgendaCard.qml  AgendaPane.qml  CalendarGrid.qml  CalendarHeader.qml  CalendarWidget.qml  DaysView.qml  EventDetailsView.qml  MonthYearSelector.qml  NewEventForm.qml
popups/weather/: WeatherBackground.qml  WeatherCard.qml  WeatherWidget.qml
scripts/: fetch_lyrics.sh  parse_org_agenda.sh
services/: BackendDaemon.qml  Brightness.qml  CalendarState.qml  ControlCenter.qml  DoNotDisturb.qml  FileShare.qml  FileStash.qml  FullscreenState.qml  LauncherState.qml  Lyrics.qml  MusicService.qml  NightLight.qml  NiriService.qml  NotificationHistory.qml  OrgAgenda.qml  PerfTracker.qml  Playerctl.qml  Pomodoro.qml  ScreenRecord.qml  Screenshot.qml  Time.qml
sidebar/: BluetoothSection.qml  ClipboardSection.qml  MediaWidget.qml  MusicSection.qml  NotificationsSection.qml  PomodoroWidget.qml  QuickActions.qml  Sidebar.qml  Slider.qml  Toggle.qml  WifiSection.qml
theme/: Layout.qml  Theme.qml
utilities/clipboard/: Clipboard.qml  ClipboardBackend.qml  ClipboardDelegate.qml
utilities/emoji/: EmojiLogic.js  EmojiPicker.qml
utilities/launcher/: Launcher.qml  LauncherBackend.qml  LauncherBackgroundLayers.qml  LauncherBluetoothView.qml  LauncherCalcWidget.qml  LauncherClipboardView.qml  LauncherColorLogic.js  LauncherColorPickerView.qml  LauncherDelegate.qml  LauncherDndWidget.qml  (+12 more)
(+16 files in other folders)
