[package]
name = "backendqs"
version = "0.1.0"
edition = "2021"

[dependencies]

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
tempfile = "3.10"
anyhow = "1.0"
tokio = { version = "1.52.3", features = ["full"] }
reqwest = { version = "0.13.4", features = ["json"] }
notify = "8.2.0"
regex = "1.12.4"
chrono = "0.4.45"
urlencoding = "2.1.3"
