[package]
name = "backendqs"
version = "0.1.0"
edition = "2021"

[build]
rustflags = ["-C", "target-cpu=native"]

[dependencies]

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
tempfile = "3.10"
anyhow = "1.0"
tokio = { version = "1.52.3", features = ["full"] }
reqwest = { version = "0.13.4", features = ["json"] }
notify = "8.2.0"
regex = "1.12.4"
chrono = "0.4.45"
urlencoding = "2.1.3"

lofty = "0.24.0"
walkdir = "2.5.0"
image = "0.25.10"
sha2 = "0.11.0"
rodio = { git = "https://github.com/RustAudio/rodio", rev = "ee3c21f2f3d926110706a2780658d098831c1ed9", features = ["symphonia-libopus"] }
zbus = { version = "5", features = ["tokio"] }
ignore = "0.4.28"
nucleo-matcher = "0.3.1"
rayon = "1.12.0"
